# iotkit-embedded

./: .gitignore  .make.settings.swn  CMakeLists.txt  Dockerfile  LICENSE  README.md  README.txt  aos.makefile  build_cross_compile_docker_image.py  config.bat  cross_compile_env.py  dn  ds  extract.bat  extract.sh  extract2.sh  layout.mk  log.txt  make.settings  makefile  model.json  pk  project.mk  sdk-c.mk
sample/subdev/: CMakeLists.txt  subdev-example.c  subdev_example_api.c  subdev_example_api.h
samples/: CMakeLists.txt  iot.mk
samples/cmp/: cmp-example.c
samples/coap/: coap-example.c
samples/device-shadow/: CMakeLists.txt
samples/http/: http-example.c
samples/http2/: http2-example.c
samples/linkkit/: light.c  linkkit_sample.c  linkkit_sample_gateway.c  linkkit_sample_share_business.c  linkkit_sample_single.c
samples/mqtt/: CMakeLists.txt  mqtt-example.c  mqtt_multi_thread-example.c
samples/ota/: CMakeLists.txt
samples/subdev/: CMakeLists.txt  subdev_example_api.c
src/: CMakeLists.txt  makefile
src/alink/: Config.in  alink_api.c  alink_api.h  alink_bearer.c  alink_bearer.h  alink_bearer_mqtt.c  alink_bearer_mqtt.h  alink_core.c  alink_core.h  alink_downstream.c  alink_example.c  alink_format.c  alink_upstream.c  alink_utils.h  alink_wrapper.h  iot.mk  iotx_alink_internal.h
src/atm/: Config.in  at_api.c  at_api.h  at_conn_mbox.c  at_conn_mbox.h  at_conn_mgmt.c  at_conn_mgmt.h  at_mqtt.c  at_mqtt.h  at_parser.c  at_parser.h  at_ssl.c  at_ssl.h  at_tcp.c  at_tcp.h  at_wrapper.h  iot.mk
src/auth/: aliot_auth.c  aliot_auth.h  aliyun_iot_auth.c  aliyun_iot_auth.h  auth.c  auth.h  guider_internal.h  iot.mk
src/bind/: bind.c  bind_mqtt.c  bind_msg.c  bind_msg.h  bind_token.c  bind_token.h  iot.mk
src/board/: config.esp32.aos  config.esp8266.aos  config.macos.make  config.macos.x86  config.mk3060.aos  config.mk3080.aos  config.openwrt.c1  config.rhino.make  config.ubuntu.x86  config.win7.mingw32  default_settings.mk
src/cloud_conn/: iot.mk  iotx_cloud_connection_api.c  iotx_cloud_connection_coap.c  iotx_cloud_connection_coap.h  iotx_cloud_connection_common.c  iotx_cloud_connection_common.h  iotx_cloud_connection_http.c  iotx_cloud_connection_http.h  iotx_cloud_connection_mqtt.c  iotx_cloud_connection_mqtt.h
src/cmp/: Link-CMP  iot.mk  iotx_cmp_api.c  iotx_cmp_cloud_conn.c  iotx_cmp_cloud_conn.h  iotx_cmp_common.c  iotx_cmp_common.h  iotx_cmp_mqtt_direct.c  iotx_cmp_mqtt_direct.h  iotx_cmp_ota.c  iotx_cmp_ota.h
src/coap/: CMakeLists.txt  coap_api.h  coap_wrapper.h  iot.mk  iotx_ca_cert.c  iotx_coap_api.c  iotx_coap_internal.h  iotx_hmac.c  iotx_hmac.h  iotx_product_linux.c
src/configs/: config.check.armcc  config.desktop.x86  config.generic-linux.embedded  config.mdm9206.sim7000c  config.none.armcc  config.ubuntu.x86  config.win7.das  config.win7.mingw32  default_settings.mk
src/cota/: CMakeLists.txt  config_ota.c
src/crypto/: iot-crypto_config.h  iot-mbedtls_config.h  iot.mk
src/dev_bind/: awss_bind.c  awss_bind_statis.c  awss_cmp_coap.c  awss_cmp_mqtt.c  awss_info.c  awss_notify.c  awss_packet.c  awss_report.c  bind.c  bind_api.h  bind_coap.c  bind_coap.h  bind_mqtt.c  bind_mqtt.h  bind_msg.c  bind_msg.h  bind_token.c  bind_utils.c  bind_utils.h  dev_bind.h  dev_bind_wrapper.h  iot.mk
src/dev_model/: Config.in  alink_api.c  alink_api.h  alink_bearer.c  alink_bearer.h  alink_bearer_mqtt.c  alink_bearer_mqtt.h  alink_config.h  alink_core.c  alink_core.h  alink_downstream.c  alink_downstream.h  alink_example.c  alink_example_gateway.c  alink_example_solo.c  alink_format.c  alink_format.h  alink_subdev.c  alink_subdev.h  alink_upstream.c  alink_upstream.h  alink_utils.c  alink_utils.h  alink_wrapper.h  dev_model_api.h  dm_api.c  dm_cota.c  dm_fota.c  dm_ipc.c  dm_log_report.c  dm_manager.c  dm_manager.h  dm_message.c  dm_message.h  dm_message_cache.c  dm_msg_process.c  dm_opt.c  dm_opt.h  dm_ota.c  dm_tsl_alink.c  (+15 more)
src/dev_model_classic/: dm_api.c  dm_manager.c  dm_manager.h  dm_message.c  dm_msg_process.c  dm_utils.c  dm_utils.h  dm_wrapper.h  impl_linkkit.c  iot.mk  iotx_cm.c  iotx_cm.h  iotx_cm_coap.c  iotx_cm_internal.h  iotx_cm_mqtt.c  iotx_dm.h  iotx_dm_config.h  iotx_dm_internal.h
src/dev_reset/: dev_reset.c  dev_reset_api.h  dev_reset_example.c  dev_reset_internal.h  dev_reset_wrapper.h  iot.mk
src/dev_sign/: Config.in  dev_sign_api.h  dev_sign_config.h  dev_sign_example.c  dev_sign_internal.h  dev_sign_mqtt.c  dev_sign_wrapper.h  iot.mk
src/device_model/: Config.in  alink_api.c  alink_api.h  alink_bearer.c  alink_bearer.h  alink_bearer_mqtt.c  alink_bearer_mqtt.h  alink_core.c  alink_core.h  alink_example.c  alink_format.c  alink_format.h  alink_upstream.c  alink_upstream.h  alink_wrapper.h  iotx_alink_internal.h
src/dm/: CMakeLists.txt
src/dynamic_register/: dynreg.c  dynreg_api.h  dynreg_example.c  dynreg_internal.h  dynreg_wrapper.h  iot.mk
src/dynreg/: Config.in  dynreg.c  dynreg_example.c  dynreg_internal.h  dynreg_wrapper.h  iot.mk
src/file_upload/: iotx_file_upload_api.c
src/fota/: CMakeLists.txt  alink.mk  iot.mk  service_ota.c
src/guider/: guider.c  guider.h  guider_internal.h  id2_guider.c  id2_guider.h  iot.mk
src/http/: README.md  http_api.h  http_wrapper.h  iot.mk  iotx_http_api.c
src/http2/: http2_api.c  http2_api.h  http2_config.h  http2_internal.h  http2_upload_api.c  http2_upload_api.h  http2_wrapper.h  iot.mk  iotx_http2.c  iotx_http2_api.c
src/infra/: Config.in  guider.c  infra_aes.c  infra_aes.h  infra_aes_config.h  infra_cjson.c  infra_cjson.h  infra_classic.c  infra_classic.h  infra_compat.c  infra_compat.h  infra_config.h  infra_defs.c  infra_defs.h  infra_errno.h  infra_httpc.c  infra_httpc.h  infra_json_parser.c  infra_json_parser.h  infra_list.h  infra_log.c  infra_log.h  infra_md5.c  infra_md5.h  infra_mem_stats.c  infra_mem_stats.h  infra_net.c  infra_net.h  infra_preauth.c  infra_preauth.h  infra_report.c  infra_report.h  infra_sha1.c  infra_sha1.h  infra_sha256.c  infra_sha256.h  infra_state.h  infra_string.c  infra_string.h  infra_timer.c  (+2 more)
src/log/: LITE-log  iot.mk  iotx_log.c  (+6 more)
(+1571 files in other folders)
