if(${CMAKE_SOURCE_DIR} STREQUAL ${CMAKE_BINARY_DIR})
    MESSAGE (FATAL_ERROR "in-tree build not allowded")
endif(${CMAKE_SOURCE_DIR} STREQUAL ${CMAKE_BINARY_DIR})

CMAKE_MINIMUM_REQUIRED (VERSION 2.8)
PROJECT (iotkit-embedded-V2.10 C)

SET (EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET (LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
SET (CMAKE_C_FLAGS " -Os -Wall")

IF (WIN32)
    SET (CMAKE_EXE_LINKER_FLAGS "-L${PROJECT_SOURCE_DIR}/src/import/win7/libs")
ENDIF (WIN32)

MESSAGE ("---------------------------------------------------------------------")
MESSAGE ("Project Name              : " ${PROJECT_NAME})
MESSAGE ("Source Dir                : " ${PROJECT_SOURCE_DIR})
MESSAGE ("Binary Dir                : " ${PROJECT_BINARY_DIR})
MESSAGE ("System Processor          : " ${CMAKE_SYSTEM_PROCESSOR})
MESSAGE ("System Platform           : " ${CMAKE_SYSTEM})
MESSAGE ("C Compiler                : " ${CMAKE_C_COMPILER})
MESSAGE ("Executable Dir            : " ${EXECUTABLE_OUTPUT_PATH})
MESSAGE ("Library Dir               : " ${LIBRARY_OUTPUT_PATH})
MESSAGE ("SDK Version               : " V2.10)
MESSAGE ("")

IF (WIN32)
    MESSAGE ("Building on WINDOWS ...")
ELSE (WIN32)
    MESSAGE ("Building on LINUX ...")
ENDIF (WIN32)
MESSAGE ("---------------------------------------------------------------------")

FILE (REMOVE_RECURSE ${PROJECT_SOURCE_DIR}/../iotx-sdk-c.pkgs)
FILE (MAKE_DIRECTORY ${PROJECT_SOURCE_DIR}/../iotx-sdk-c.pkgs)


ADD_DEFINITIONS (-DCM_VIA_CLOUD_CONN)
ADD_DEFINITIONS (-DCM_VIA_CLOUD_CONN_MQTT)
ADD_DEFINITIONS (-DCOAP_COMM_ENABLED)
ADD_DEFINITIONS (-DCOAP_DTLS_SUPPORT)
ADD_DEFINITIONS (-DCOAP_OBSERVE_CLIENT_SUPPORTED)
ADD_DEFINITIONS (-DCOAP_OBSERVE_SERVER_SUPPORTED)
ADD_DEFINITIONS (-DCOAP_SERV_MULTITHREAD)
ADD_DEFINITIONS (-DCOAP_USE_PLATFORM_LOG)
ADD_DEFINITIONS (-DCOAP_USE_PLATFORM_MEMORY)
ADD_DEFINITIONS (-DCONFIG_GUIDER_AUTH_TIMEOUT=500)
ADD_DEFINITIONS (-DCONFIG_HTTP_AUTH_TIMEOUT=500)
ADD_DEFINITIONS (-DCONFIG_MID_HTTP_TIMEOUT=500)
ADD_DEFINITIONS (-DFORCE_SSL_VERIFY)
ADD_DEFINITIONS (-DHTTP_COMM_ENABLED)
ADD_DEFINITIONS (-DIOTX_WITHOUT_ITLS)
ADD_DEFINITIONS (-DMQTT_COMM_ENABLED)
ADD_DEFINITIONS (-DMQTT_DIRECT)
ADD_DEFINITIONS (-DMQTT_DIRECT_NOITLS)
ADD_DEFINITIONS (-DMQTT_SHADOW)
ADD_DEFINITIONS (-DOTA_ENABLED)
ADD_DEFINITIONS (-DOTA_SIGNAL_CHANNEL=1)
ADD_DEFINITIONS (-DSUBDEV_VIA_MQTT)
ADD_DEFINITIONS (-DTEST_COAP_DAILY)
ADD_DEFINITIONS (-DUSING_UTILS_JSON)
ADD_DEFINITIONS (-D_PLATFORM_IS_HOST_)

ADD_SUBDIRECTORY (src/utils)
ADD_SUBDIRECTORY (src/security)
ADD_SUBDIRECTORY (src/services/linkkit)
ADD_SUBDIRECTORY (src/protocol/iot-coap-c)
ADD_SUBDIRECTORY (src/protocol/mqtt)
ADD_SUBDIRECTORY (src/services/ota)
ADD_SUBDIRECTORY (src/services/shadow)
ADD_SUBDIRECTORY (src/protocol/coap)
ADD_SUBDIRECTORY (src/protocol/http)

ADD_SUBDIRECTORY (src/platform)
ADD_SUBDIRECTORY (samples)
ADD_SUBDIRECTORY (src/tests)
ADD_SUBDIRECTORY (src/thirdparty/tls)
ADD_SUBDIRECTORY (src/tools/linkkit_tsl_convert)

ADD_LIBRARY (iot_sdk STATIC
    $<TARGET_OBJECTS:iot_utils>
    $<TARGET_OBJECTS:iot_system>
    $<TARGET_OBJECTS:iot_linkkit>
    $<TARGET_OBJECTS:core_coap>
    $<TARGET_OBJECTS:iot_mqtt>
    $<TARGET_OBJECTS:iot_ota>
    $<TARGET_OBJECTS:iot_shadow>
    $<TARGET_OBJECTS:iot_coap>
    $<TARGET_OBJECTS:iot_http>
)
if(WIN32)
    TARGET_LINK_LIBRARIES (iot_sdk ws2_32)
endif(WIN32)

