add_subdirectory(http)
add_subdirectory(mqtt)
add_subdirectory(ota)
add_subdirectory(device-shadow)
if(FEATURE_SUBDEVICE_ENABLED)
    add_subdirectory(subdev)
endif(FEATURE_SUBDEVICE_ENABLED)
if(FEATURE_CMP_ENABLED)
    add_subdirectory(cmp)
    if(FEATURE_DM_ENABLED)
        add_subdirectory(linkkit)
    endif(FEATURE_DM_ENABLED)
endif(FEATURE_CMP_ENABLED)
if(NOT WIN32)
    add_subdirectory(coap)
endif(NOT WIN32)
