INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR})
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/.O/usr/include)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/samples/)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/samples/cloud-conn)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/samples/cmp)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/samples/coap)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/samples/device-shadow)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/samples/http)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/samples/linkkit)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/samples/mqtt)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/samples/ota)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/samples/subdev)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/board)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/external)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/external/tls)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/external/tls/mbedtls-in-iotkit)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/external/tls/mbedtls-in-iotkit/include)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/external/tls/mbedtls-in-iotkit/include/mbedtls)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/external/tls/mbedtls-in-iotkit/library)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/framework)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/framework/cm)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/framework/cm/inc)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/framework/cm/src)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/framework/connectivity)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/framework/connectivity/coap)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/framework/connectivity/http)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/framework/connectivity/iot-coap-c)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/framework/connectivity/mqtt)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/framework/connectivity/mqtt/Link-MQTT)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/framework/connectivity/mqtt/Link-MQTT/MQTTPacket)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/framework/dm)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/framework/dm/include)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/framework/dm/include/interface)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/framework/dm/src)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/framework/services)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/framework/services/cota)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/framework/services/fota)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/framework/services/linkkit)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/framework/services/linkkit/include)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/framework/services/linkkit/src)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/framework/services/ota)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/framework/services/ota/Link-OTA)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/framework/services/ota/Link-OTA/src)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/framework/services/shadow)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/framework/services/subdev)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/import)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/import/include)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/import/mdm9206)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/import/mdm9206/example)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/import/mdm9206/include)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/import/ubuntu)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/import/ubuntu/include)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/import/ubuntu/include/itls)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/import/ubuntu/include/tfs)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/import/ubuntu/libs)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/import/win7)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/import/win7/32bit-libs)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/import/win7/include)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/import/win7/include/itls)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/import/win7/include/tfs)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/packages)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/platform)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/platform/os)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/platform/os/ubuntu)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/platform/os/win7)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/platform/ssl)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/platform/ssl/mbedtls)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/platform/ssl/openssl)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/sdk-impl)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/sdk-impl/exports)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/sdk-impl/imports)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/system)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/system/src)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/system/tfs)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/system/tfs/platform)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/tests)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/tools)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/tools/linkkit_tsl_convert)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/tools/linkkit_tsl_convert/include)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/tools/linkkit_tsl_convert/src)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/utils)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/utils/digest)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/utils/log)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/utils/misc)

ADD_EXECUTABLE (mqtt-example
    mqtt/mqtt-example.c
)
ADD_EXECUTABLE (mqtt_rrpc-example
    mqtt/mqtt_rrpc-example.c
)
ADD_EXECUTABLE (mqtt_multi_thread-example
    mqtt/mqtt_multi_thread-example.c
)
ADD_EXECUTABLE (ota_mqtt-example
    ota/ota_mqtt-example.c
)
ADD_EXECUTABLE (shadow-example
    device-shadow/shadow-example.c
)
ADD_EXECUTABLE (http-example
    http/http-example.c
)
ADD_EXECUTABLE (cmp-example
    cmp/cmp-example.c
)
ADD_EXECUTABLE (linkkit-example
    linkkit/linkkit_sample.c
)
ADD_EXECUTABLE (linkkit-sample_sb
    linkkit/linkkit_sample_share_business.c
)

TARGET_LINK_LIBRARIES (mqtt-example iot_sdk)
TARGET_LINK_LIBRARIES (mqtt-example iot_platform)
TARGET_LINK_LIBRARIES (mqtt-example iot_tls)
TARGET_LINK_LIBRARIES (mqtt-example pthread)

TARGET_LINK_LIBRARIES (mqtt_rrpc-example iot_sdk)
TARGET_LINK_LIBRARIES (mqtt_rrpc-example iot_platform)
TARGET_LINK_LIBRARIES (mqtt_rrpc-example iot_tls)
TARGET_LINK_LIBRARIES (mqtt_rrpc-example pthread)

TARGET_LINK_LIBRARIES (mqtt_multi_thread-example iot_sdk)
TARGET_LINK_LIBRARIES (mqtt_multi_thread-example iot_platform)
TARGET_LINK_LIBRARIES (mqtt_multi_thread-example iot_tls)
TARGET_LINK_LIBRARIES (mqtt_multi_thread-example pthread)

TARGET_LINK_LIBRARIES (ota_mqtt-example iot_sdk)
TARGET_LINK_LIBRARIES (ota_mqtt-example iot_platform)
TARGET_LINK_LIBRARIES (ota_mqtt-example iot_tls)
TARGET_LINK_LIBRARIES (ota_mqtt-example pthread)

TARGET_LINK_LIBRARIES (shadow-example iot_sdk)
TARGET_LINK_LIBRARIES (shadow-example iot_platform)
TARGET_LINK_LIBRARIES (shadow-example iot_tls)
TARGET_LINK_LIBRARIES (shadow-example pthread)

TARGET_LINK_LIBRARIES (http-example iot_sdk)
TARGET_LINK_LIBRARIES (http-example iot_platform)
TARGET_LINK_LIBRARIES (http-example iot_tls)
TARGET_LINK_LIBRARIES (http-example pthread)

TARGET_LINK_LIBRARIES (cmp-example iot_sdk)
TARGET_LINK_LIBRARIES (cmp-example iot_platform)
TARGET_LINK_LIBRARIES (cmp-example iot_tls)
TARGET_LINK_LIBRARIES (cmp-example pthread)

TARGET_LINK_LIBRARIES (linkkit-example iot_sdk)
TARGET_LINK_LIBRARIES (linkkit-example iot_platform)
TARGET_LINK_LIBRARIES (linkkit-example iot_tls)
TARGET_LINK_LIBRARIES (linkkit-example pthread)

TARGET_LINK_LIBRARIES (linkkit-sample_sb iot_sdk)
TARGET_LINK_LIBRARIES (linkkit-sample_sb iot_platform)
TARGET_LINK_LIBRARIES (linkkit-sample_sb iot_tls)
TARGET_LINK_LIBRARIES (linkkit-sample_sb pthread)

